Fixed alignment of Terms of Service for ushahidi/tenfour#1317

--- a/src/pages/signup-password/signup-password.scss
+++ b/src/pages/signup-password/signup-password.scss
@@ -4,9 +4,9 @@ page-signup-password {
       margin-top: 0;
     }
     &.terms {
-      background-color: color($colors, dark);
+      background-color: color($colors, input);
       ion-row, ion-col, ion-item {
-        background-color: color($colors, dark);
+        background-color: color($colors, input);
       }
     }
   }
